<resources>
    <string name="app_name">Kunde Connect</string>
</resources>
